# filesearch

./: .gitignore  Cargo.toml  README.md
gui-library/: .gitignore  Cargo.toml
revised/: cargo.toml
revised/src/: main.rs
ribir/: .gitignore  Cargo.toml
sdm/: cargo.toml
sdm/src/: main.rs
src/: core.rs  main.rs  model.rs
