[package]
name = "filesearch-gui-working-backup-Dec18"
version = "0.1.0"
edition = "2021"
authors = ["EndrDragon44"]

[dependencies]
iced = { version = "0.14", features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dirs = "5"
walkdir = "2"
fuzzy-matcher = "0.3"
regex = "1"
anyhow = "1"
rfd = "0.9"
notify = "5"

// add targets for macos, intel AND arm64, windows x86 x64 and arm64, and linux x86,, x64, and arm64