[package]
name = "filesearch-gui"
version = "1.0.0"
authors = ["EndrDragon44", "nreef12", "caden_tm"]
edition.workspace = true

repository = "https://github.com/endrdragon44/filesearch"


[dependencies]
ribir = {path = "./ribir"}
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dirs = "6"
walkdir = "2"
fuzzy-matcher = "0.3"
regex = "1"
anyhow = "1"
rfd = "0.17.2"
notify = "8.2"
